# src/main/kotlin/com/wutsi/ecommerce/shipping/dto/ShippingOrder.kt
@@ -6,7 +6,6 @@ import kotlin.String
 public data class ShippingOrder(
     public val id: Long = 0,
     public val orderId: String = "",
-    public val accountId: Long = 0,
     public val merchantId: Long = 0,
     public val status: String = "",
     public val shipping: Shipping = Shipping()
